--- a/app/views/layout-user-testing.html
+++ b/app/views/layout-user-testing.html
@@ -75,6 +75,9 @@
       margin-top: 20px;
       padding-top: 20px;
     }
+
+    /*.hidden {visibility: hidden; }*/
+    td.opss-temp-td {text-align: center !important; padding: 40px 10px; font-size: 1.4rem !important; }
   </style>
 {% endblock %}
 
