--- a/docs/views/templates/question.html
+++ b/docs/views/templates/question.html
@@ -15,7 +15,7 @@
 
       <h1 class="govuk-heading-xl">Heading or question goes here</h1>
 
-      <form class="form" action="/url/of/next/page" method="post">
+      <form action="/url/of/next/page" method="post">
 
         <p>[Insert question content here]</p>
 
