--- a/app/views/add-product-v4/might-already-exist-error.html
+++ b/app/views/add-product-v4/might-already-exist-error.html
@@ -27,7 +27,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-full">
 
-        <form class="form" action="#" method="post" novalidate>
+        <form action="#" method="post" novalidate>
 
             <div class="govuk-form-group govuk-form-group--error">
                 <fieldset class="govuk-fieldset" aria-describedby="isit-hint isit-error">
