--- a/app/views/add-product-v4/reason-for-creating-case-old.html
+++ b/app/views/add-product-v4/reason-for-creating-case-old.html
@@ -16,7 +16,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-full">
 
-        <form class="form" action="#" method="post" novalidate>
+        <form action="#" method="post" novalidate>
 
 
 {% set reasonUnsafeHtml %}
