--- a/app/views/create-cases-add-products/find-the-product.html
+++ b/app/views/create-cases-add-products/find-the-product.html
@@ -13,7 +13,6 @@
 {% endblock %}
 
 
-
 {% block content %}
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
@@ -40,7 +39,7 @@
       text: "Yes - go to the products page",
       hint: {
         classes: "govuk-!-font-size-16 govuk-!-margin-bottom-4",
-        html: 'The product may already exist within our records. On the products page you can search for it or add a new product. You can then <span class="govuk-!-font-weight-bold">create a case</span> directly from the product.'
+        html: 'Create your case from the product: Find the product - or add it to our records - and then create your case from there.'
       }
     },
     {
@@ -48,7 +47,7 @@
       text: "No - create a case",
       hint: {
         classes: "govuk-!-font-size-16",
-        text: "The case might not relate to a product, or the product details aren't yet available. You can add a product to a case later from the cases page."
+        html: "The case might not relate to a product, or the product details aren&#39;t available yet. You can add a product to a case later from the cases page."
       }
     }
   ]
@@ -63,3 +62,7 @@
     </div>
   </div>
 {% endblock %}
+
+<!-- The product may already exist within our records. On the products page you can search for it or add a new product. You can then <span class="govuk-!-font-weight-bold">create a case</span> directly from the product. -->
+
+<!-- The case might not relate to a product, or the product details aren't yet available. You can add a product to a case later from the cases page. -->
