--- a/app/views/responsible-person-address/responsible-person-address_business.html
+++ b/app/views/responsible-person-address/responsible-person-address_business.html
@@ -63,7 +63,7 @@
 <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
-        <form class="form" action="#" method="post" novalidate>
+        <form action="#" method="post" novalidate>
 
             <div class="govuk-form-group">
                 <label class="govuk-label" for="responsible_persons_details_form_name">
