--- a/docs/views/examples/branching/index.html
+++ b/docs/views/examples/branching/index.html
@@ -13,7 +13,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
-      <form action="/docs/examples/branching/over-18-answer" method="post" class="form">
+      <form action="/docs/examples/branching/over-18-answer" method="post" >
 
         <h1 class="govuk-heading-xl">
           Branching
