--- a/docs/views/examples/pass-data/vehicle-features.html
+++ b/docs/views/examples/pass-data/vehicle-features.html
@@ -13,7 +13,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
-      <form action="/docs/examples/pass-data/vehicle-check-answers" method="post" class="form">
+      <form action="/docs/examples/pass-data/vehicle-check-answers" method="post" >
 
         <div class="govuk-form-group">
           <fieldset class="govuk-fieldset" aria-describedby="vehicle-features-hint">
