--- a/docs/views/examples/pass-data/vehicle-registration.html
+++ b/docs/views/examples/pass-data/vehicle-registration.html
@@ -13,7 +13,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
-      <form action="/docs/examples/pass-data/vehicle-type" method="post" class="form">
+      <form action="/docs/examples/pass-data/vehicle-type" method="post" >
 
         <div class="govuk-form-group">
           <h1 class="govuk-label-wrapper">
