--- a/app/views/product-case-testing/might-already-exist-bc.html
+++ b/app/views/product-case-testing/might-already-exist-bc.html
@@ -13,9 +13,29 @@
 
 
 {% block content %}
+<div class="govuk-error-summary" aria-labelledby="error-summary-title" role="alert" tabindex="-1" data-module="govuk-error-summary">
+  <h2 class="govuk-error-summary__title" id="error-summary-title">
+    There is a problem
+  </h2>
+  <div class="govuk-error-summary__body">
+
+    <ul class="govuk-list govuk-error-summary__list">
+
+      <li>
+
+        <a href="#isit">Select yes if this is your product</a>
+
+      </li>
+
+    </ul>
+  </div>
+</div>
+
+
+
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-full">
-
+<p>{{ data['barnumber'] }}</p>
         <h1 class="govuk-heading-l govuk-!-margin-bottom-2">
             Is this your product?
         </h1>
@@ -29,9 +49,7 @@
 
                     <span class="govuk-caption-m">The product in our records</span>
 
-                    <h2 class="govuk-heading-m govuk-!-margin-bottom-3">
-                        Sony 3000 hair dryer (x3000rpm)
-                    </h2>
+                    <h2 id="productName" data-product-barcode="{{ data['barnumber'] }}" class="govuk-heading-m govuk-!-margin-bottom-3"></h2>
 
                     <dl class="govuk-summary-list govuk-summary-list--no-border govuk-!-margin-bottom-3">
                         <div class="govuk-summary-list__row">
@@ -115,7 +133,7 @@
                         <div class="govuk-summary-list__row">
                             <dt class="govuk-summary-list__key">Barcode </dt>
                             <dd class="govuk-summary-list__value">
-                                6666667777777
+                                {{ data['barnumber'] }}
                             </dd>
                         </div>
                     </dl>
@@ -124,12 +142,16 @@
         </section>
 
         <form action="#" method="post" novalidate>
-            <div class="govuk-form-group">
+            <div class="govuk-form-group" data-test-for="radio" data-test-ele-name="isit">
                 <fieldset class="govuk-fieldset" aria-describedby="isit-hint">
 
                     <legend class="govuk-visually-hidden">
                             Do you want to stop adding a new product?
                     </legend>
+
+                    <span id="isit-error" class="govuk-error-message">
+                        <span class="govuk-visually-hidden">Error:</span> Select yes if this is your product
+                    </span>
 
                     <div class="govuk-radios govuk-!-padding-bottom-1">
                         <div class="govuk-radios__item">
@@ -157,4 +179,39 @@
 
     </div>
   </div>
+{% endblock %}
+
+{% block bodyEnd %}
+
+  {% block scripts %}
+    {% include "includes/scripts-testing.html" %}
+    {% block pageScripts %}
+    {% endblock %}
+  {% endblock %}
+
+<script>
+  jQuery(document).ready(function(){
+
+    setMenuState('products');
+    validateTheForm($("#main-content").find('form'));
+
+        var barno = $('#productName').data("product-barcode").replace(/[^0-9]/g, '');
+        var fromTheProducts = '';
+
+        $.each(data, function(key, val) {
+            fromTheProducts = val.prod_barcode.replace(/[^0-9]/g, '');
+            if(barno == fromTheProducts){
+                $('#productName').text(val.prod_name);
+                return false;
+            }
+        });
+
+
+
+
+
+
+  });
+</script>
+
 {% endblock %}
